--- a/03.플러터PJ/app_01_store/analysis_options.yaml
+++ b/03.플러터PJ/app_01_store/analysis_options.yaml
@@ -10,19 +10,25 @@
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
-  rules:
+    # The lint rules applied to this project can be customized in the
+    # section below to disable rules from the `package:flutter_lints/flutter.yaml`
+    # included above or to enable additional rules. A list of all available lints
+    # and their documentation is published at https://dart.dev/lints.
+    #
+    # Instead of disabling a lint rule for the entire project in the
+    # section below, it can also be suppressed for a single line of code
+    # or a specific dart file by using the `// ignore: name_of_lint` and
+    # `// ignore_for_file: name_of_lint` syntax on the line or in the file
+    # producing the lint.
+
+    # 속성위에 콜론(:) 붙여써야함
+    # 속성값은 아랫줄에 같은 라인에서 스페이스바 2개
+    # 넣어줘야 yaml형식 문서 문법에 맞는다.
+    rules:
+      prefer_const_constructors: false
+      prefer_const_literals_to_create_immutables: false
+      prefer_const_constructors_in_immutables: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
